# todo-tui

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  test_e2e.py  test_mcp_server.py  todo.py  todo_mcp_server.py
plan-dashboard/: main.js  package-lock.json  package.json  preload.js  setup.sh
plan-dashboard/src/: app.js  index.html  styles.css
plan-dashboard/src/components/: AddPlanModal.jsx  Dashboard.jsx  PlanCard.jsx  PlanDetail.jsx  PlanTree.jsx  Timeline.jsx
plan-dashboard/src/lib/: data.js  plan-manager.js
src/todo_tui/: __init__.py  main.py  managers.py  migrate.py  models.py
src/todo_tui/screens/: __init__.py  add_task.py  memo.py  report.py  season_select.py  sprint.py  workbench.py
