[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-tui"
version = "2.0.0"
description = "Personal work management TUI with Season/Sprint/Daily hierarchy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["todo", "tui", "task", "management", "sprint", "season"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual>=0.40.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
todo = "todo_tui.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/todo-tui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
todo_tui = ["*.json"]
